# DeepReproduction

./: .gitignore  LICENSE  README.md
Dataset/: list
Dataset/CVE-2022-28805/: Dockerfile  READ.md  vuln.yaml
Dataset/CVE-2022-28805/vuln_data/vuln_diffs/: patch.diff
Dataset/CVE-2022-28805/vuln_data/vuln_pocs/: poc.lua
Dataset/CVE-2022-28805/vuln_yaml/: build_artifact.yaml
FrameworkDesign/: framework.md  poc阶段架构设计.md  后续三阶段Agent开发清单.md  技术债清单.md  知识库agent流程.txt
scripts/: validation.py
source/: README.md  pyproject.toml
source/Dataset/CVE-2022-28805/: Dockerfile
source/Dataset/CVE-2022-28805/vuln_data/vuln_scripts/: build.sh  run.sh
source/app/: config.py  main.py
source/app/orchestrator/: graph.py  nodes.py  routers.py  state.py
source/app/schemas/: build_artifact.py  fetched_page.py  knowledge.py  poc_artifact.py  task.py  verify_result.py
source/app/stages/: build.py  knowledge.py  poc.py  verify.py
source/app/templates/: Dockerfile.j2  build.sh.j2  poc.Dockerfile.j2  poc_run.sh.j2  run.sh.j2  verify.Dockerfile.j2  verify_run.sh.j2
source/app/tools/: archive_tools.py  content_cleaner.py  docker_tools.py  file_tools.py  git_tools.py  log_parsing.py  log_tools.py  patch_tools.py  process_tools.py  reference_extractor.py  web_fetch.py
source/scripts/: run_build.py  run_verify.py
source/tests/: test_build_stage.py  test_build_verify.py  test_docker_tools.py  test_graph_workflow.py  test_knowledge_refs.py  test_patch_tools.py  test_poc_stage.py  test_router.py  test_run_verify.py  test_schemas.py  test_verifier.py  test_verify_stage.py
(+3 files in other folders)
