# 文件说明：Python 项目配置文件。用于声明依赖、Python 版本和构建工具配置。

[project]
name = "DeepReproduction"
version = "0.0.1"
description = "Vulnerability Reproduction Based on LLM Agents"
authors = []
dependencies = [
    "langchain==0.1.0",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.1.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "None"}

[tool.pdm]
distribution = false
